# stm32_helloworld

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  toolchain.cmake
testprogram/: CMakeLists.txt  Makefile  stm32firmware.ioc
testprogram/Core/Src/: main.c  stm32f4xx_hal_msp.c
